final version fixed auto margins

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>About Me</title>
   
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -11,16 +13,20 @@
 <body>
   <div class="header">
     <h1 class="hi"> Don Newman</h1>
-    <div class="toplinks">
-      <a href="index.html" id="pagelink">About Me</a>
-      <a href="portfolio.html" id="pagelink">Portfolio</a>
-      <a href="contacts.html" id="pagelink">Contact</a>
+  </div>
+  <div class="header2">
+    <div class="linksheader">
+      <a href="index.html" class="pagelink">About Me</a>
+      <a href="portfolio.html" class="pagelink">Portfolio</a>
+      <a href="contacts.html" class="pagelink">Contact</a>
     </div>
   </div>
+  
 
 
   <!-- dis the big box -->
-  <div class="mainbox">
+  
+  <div class="wordcontainer">
 
     <h3> About Me</h3>
       <!-- I will get a regular professional headshot next time I get a haircut (:-->
@@ -36,7 +42,6 @@
       <p>Although I spent many hours practicing, computers have always had a large presence in my life as well. At an early age, I read books on HTML and built
         my own basic web pages for fun. This, accompanied with a solid childhood of RTS games, has given me a great amount of comfort behind a keyboard. I plan on utilizing
         my unique set of keyboard skills, as well as the elevated standards, discipline and problem solving skills aquired as a professional performer to greatest aid whichever company I decide to work with.</p> 
-      </p>
          
 
   
@@ -44,9 +49,12 @@
   </div>
   <div class="wrapper">
     copyright&copy;
-    <div class="push"></div>
-  </div>
-  <footer class="footer"></footer>
+     <div class="push">           
+     </div>
+    <footer class="footer"></footer>
+    </div>
+     
+     </div>
 </body>
 
 </html>
