--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Portfolio</title>
-  <!-- <link rel="stylesheet" type="text/css" href="assets/css/resetcss.css"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
@@ -11,12 +11,15 @@
 <body>
     <div class="header">
         <h1 class="hi"> Don Newman</h1>
-                <div class="toplinks">
-                  <a href="index.html" id="pagelink">About Me</a>
-                 <a href="portfolio.html" id="pagelink">Portfolio</a>
-                 <a href="contacts.html" id="pagelink">Contact</a>
-                 </div>
+    </div>
+        <div class="header2">
+          <div class="linksheader">
+            <a href="index.html" class="pagelink">About Me</a>
+            <a href="portfolio.html" class="pagelink">Portfolio</a>
+            <a href="contacts.html" class="pagelink">Contact</a>
+          </div>
         </div>
+        
 
         <!-- dis the big box -->
   <div class="mainboxport">
@@ -47,10 +50,13 @@
       </div>
     </div>    
   </div>               
-     <div class="wrapper">
-      copyright&copy;
-      <div class="push"></div>
-  </div>
-  <footer class="footer"></footer>
+  <div class="wrapper">
+    copyright&copy;
+     <div class="push">           
+     </div>
+    <footer class="footer"></footer>
+    </div>
+     
+     </div>
         </body>
 </html>
